--- a/ORCapTrade/CurrentCapTrade.Rmd
+++ b/ORCapTrade/CurrentCapTrade.Rmd
@@ -140,9 +140,11 @@ We are trying to do cap and trade with a collar but there are complications:
 + "Leakage" firms leaving the because of a price on carbon
 + Complex rules that could make some people pay twice for GHG and other pay not at all.
 + Interaction between:
-    + Public Utilities commission
     + Global Warming Commission
-    + Environmental Quality Commission
+    + Public Utilities Commission
+    + Department of Transportation
+    + Oregon Business Development Department
+    + Department of Environmental Quality
     
 # Current State of Affairs
 
@@ -226,7 +228,7 @@ We are trying to do cap and trade with a collar but there are complications:
 + At federal level, you can see a judge.
 + At state level you can do that too, often the commission is the first judge, then you may get an administrative law judge, then a "real" judge
 
-+ The legislature may review the regulations
++ The legislature may review the regulations.  There may be bill in 2018 that requires it.
 
 # Remember ...
 
@@ -236,60 +238,228 @@ We are trying to do cap and trade with a collar but there are complications:
 + Boards and commissions tend to be appointed, not elected, and they are not so sensitive to political contributions.
 + Sometimes, the regulators, "Bring a knife to a gunfight"
 
-# Involved Agency
+# Involved Agencies
+
++ Global Warming Commission
+    + Establish limits
+    + "Coordinate"
++ Public Utilities Commission
+    + Decide how to treat the allowances and offsets
+    + Electricity G/T/D
+    + Natural Gas 
++ Department of Transportation
+    + How to spend the motor vehicle fuel part
++ Oregon Business Development Department
+    + How to help people transition
++ Department of Environmental Quality
+    + Establish a market for $CO_2$
+
+# What is covered.
+
+The intent is to require allowances for:
+
++ Natural Gas
++ Electricity
++ Motor Vehicle Fuel
++ Point  sources more than 20kT $CO_2$
+
+Note that aggriculture and Forrestry are not connected to this system. A firm level list is on p. 69 (http://www.oregon.gov/deq/FilterDocs/ghgmarketstudy.pdf)  
 
 # Point of Regulation
 
-# Leakage -- A Bad Word
+"Point of Regulation" where do you put the meter and who pays.
 
-Means producers leaving
+Key Needs:
 
-+ Need to have this change when others adopt cap and trade
++ Easy to meter at that point.
++ Hard to avoid
++ Makes sure nobody pays twice.
 
-+ Talking about NAICS codes to define.
+# Point of Regulation: Electricity
 
-+ Benchmarking
++ Must cover in-state merchant generators
++ Must cover out of purchases
++ Must cover in-state IOU generation
 
-+ Allowance allocation
+Complicatons:
 
-+ Risk diminishes with more online and should be removed.
++ Some generation is gas fired (Avoid double counting)
++ Out of state purchases must not run afoul of the commerce clause (Interstate trade is Federal)
++ Cogen?
++ Bonneville Power Administration (Federal) is a balancing authority
++ Wheeling (Generated out of state, passing through but to elsewhere.)
 
-+ JW we need to focus on the effect on relative energy prices.
+# Point of Regulation: Natural Gas
 
-+ What about trade patterns changing?
++ Interstate pipelines
++ LNG terminals
++ Marketers
 
+Complications:
 
-# Relationship to RPS and Coal Prohibition
++ Ontario has  seen marketers split to avoid 20kT limit.
++ Mix of inter and intra state pipelines
 
-+ Overlay
-+ Credit
+# Point of Regulation: Motor Fuel
 
++ Pipelines (https://www.eia.gov/state/maps.php?v=Petroleum) 
++ Trucking
+
+Complicatons:
+
++ Dyed (untaxed diesel)
++ Oregon Constitution requires use of "Fuel taxes" on highways.
+
+# Point of Regulation Other
+
+Mish mash of:
++ Concrete
++ Chemicals
++ Landfill
+
+This is hard
+
+# Leakage 
+
+Compound concept
+
++ Businesses leaving regulated area to produce same GHG emissons outside cap and trade area.
++ Shifting contracts so lower carbon is counted in Oregon and higher carbon is counted elsewhere.
++ Washing the source of emissions.
+
+# Business Leaving (Emissions-Intensive Trade-Exposed (EITE))
+
++ Note: emissions not energy.
++ Compete with firms that do not face GHG allowance requirements.
+
+Complications:
+
++ GHG allowances are one price, we could be low on others.
++ Current thought is to do this based on NAICS codes
++ Or, individuals but renormed/assessed periodicatlly
+
+Problem goes away with greater coverage of cap and trade accross states.
+
+# Shifting Contracts (Mostly Electricity)
+
+Remember that electricty comes from everywhere.  Electrons are not 'green' and 'brown', but contracts are.
+
+Example:
+
++ Merchant generator sells green and brown power, 1/2 to ID and 1/2 OR IOUs.
++ OR IOU now only wants green
+    + All Brown power goes to ID
+    + All Green power goes to OR
++ No change in net $CO_2$
+
+# Source Washing
+
+Obscure the source of power through a chain of contracts.
+
+Example:
+
++ Buy coal power from A.
++ Avoid buying directly from A
+    + A sells to B.
+    + B sells to C
+    + ...
+    + Z sells to IOU. We don't know if the power is green or brown so assume Natural Gas
 
 # Interaction with PUC
 
-# Trade Exposured Emissions Intensive
++ The Public Utilities Commission (PUC):
+    + Regulates retail prices for electricity and gas.
+    + Defines allowable expenditures that are then passed on the the consumers in rates
++ They must figure out how:
+    + They will allow the LDC will treat allowances.
+    + How existing coal phase-out interacts
+    + How the existing renewable portfolio standards (RPS) interacts
 
-+ Not just energy intensive
+# How PUC treats Costs
 
-# Possible Definitions
++ $Revenue~Requirement = Expenses + (Rate~of~Return) Rate~Base$
++ *Expenses* are generally on the income statement, but there are a few things that start on the balance sheet and move over to income statement.
++ *Rate Base* is generally on the balance sheet, but there are a few things that move back and forth between balance and income.
 
-# Possible Solutions
+To be clear, the cost of the allowances will be passed on to the consumer but how?
+
++ Allow only current allowances -- Expenses.
++ Allow them to bank them  (if rules allow banking) -- Rate base
+
+# The Rate Base Complication
+
++ _If they can hold on to the allowances_, utilities will earn a 'fair rate of return'
++ _If the purchase assets at the floor price_, the value goes up by at least the floor price.
+
+$$(1 + Rate~of~Return)(1 + Price~Increase ) - 1 = Utility~Return$$
+
+Can be big
+
+$$(1 + .06)(1 + .05 ) - 1 = 11.3\%$$
+
+Note that this is risk free.
+
+# Coal Phase-out and RPS
+
++ Both are expensive
+    + IOUs have purchased new generation and long-term contracts
+    + These costs are already imbedded in utility rates.
+
+Would you have committed to natural gas if you knew cap and trade was on the way?
+
+# Coal Phase-out and RPS Options
+
++ Keep them separate:
+    + Add those costs and the allowance costs into the revenue requirement.
+    + Easy
++ Give them credit for reductions:
+    + Give them an allowance credit -- every year -- for the the difference between coal generation and natural gas.
+    + Give them allowance credit -- every year -- for the avoided $CO_2$ emmissions.
+    + Real  coal phase-out and RPS.
+
+# Two Phrases you missed: "Give Allowances", "Banking"
+
++ Banking
+    + Ability to save allowances from one year and apply to another.
+
++ How to distribute allowances is not guided by microeconomic theory
+    + Theory says it doesn't matter for price, with some caveates.
+    + How they are allocated determines who gets the benefits.
+          + State sells all -- State gains
+          + Given to utility --  utility shareholders/consumers gain.
+          + Can mix
+
+# Banking Allocations
+
++ To bank or not:
+    + Industry likes to bank.  It allows stability
+    + Hard to change ex post:  European markets collapsed in 2007 when they tried to remove it.
+    
++ Options:
+    + Limited banking.  Three year is common suggested number.
+        + 2018 allowances can be used till 2021.
+        + Not PUC can be stricter than that if they wish.
+    + Degrading
+        + 10% less every year.
+        + 1 T 2018 allowance is worth .9 T in 2019, .81 in 2020 ,...
 
 # Transition Considerations
 
 # Consignment, Free Allocations, Direct Expenditures
 
-# Banking Allocations
-
-+ Degrade?
-+ time limits?
-
 # Related Reserves for High Costs
 
 # What the Markets Look Like
 
-+ WCI
-+ Futures Market
++ Western Climate Initiative (http://www.westernclimateinitiative.org)
+    + Multi-state/province set of rules
+    + Trading platform
+    + Oregon has an on and off relationship with this.
++ California (http://calcarbondash.org/)
++ Futures Market (https://www.theice.com/products/31687042/California-Carbon-Allowance-Vintage-2017-Future/specs)
+    + California is big enough.
+    + Futures markets are where most price discovery takes place
+    + Way more transactions.
 
 # Market Power Considerations
 
@@ -297,6 +467,9 @@ Means producers leaving
 + Use to maintain market power
 
 # Offsets
+
++ Offsets protocols https://www.arb.ca.gov/cc/capandtrade/offsets/offsets.htm#protocols
++ Offset verification (https://www.arb.ca.gov/cc/capandtrade/offsets/verification/verification.htm)
 
 CA limited this. 
 
@@ -307,4 +480,14 @@ Little action because the price of allowances are not high.  On the floor.
 # The Offset Markets and Clawback
 
 # California's Offset Reduction
+
+
+
++ Allowance allocation
+
++ Risk diminishes with more online and should be removed.
+
++ JW we need to focus on the effect on relative energy prices.
+
++ What about trade patterns changing?
 
