close out of 17 course.

--- a/DayOne/DayOne.Rmd
+++ b/DayOne/DayOne.Rmd
@@ -60,7 +60,7 @@ In short, I come from the consumption side, not the production side.
 + I'm Dyslexic.  If you see a slide without a typo -- be amazed.
 + Don't think that you have to understand everything
     + You should read everything.
-    + I unusually read things over and over again and learn new things every time.
+    + I usually read things over and over again and learn new things every time.
     + If you understand half -- amazing.
     + The more you read, the easier it is to learn more.  It really builds on itself.
 + Don't be afraid to Google a picture or an article to help you understanding something in class.
